<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:tag="dimensions_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BallaActivityLayout"
    tools:context=".view.DimensionsActivity">

    <TextView
        android:id="@+id/dimensions_label_number_of_colors"
        android:text="@string/label_number_of_colors"
        style="@style/BallaLabelText"
        app:layout_constraintBottom_toTopOf="@id/dimensions_seekbar_number_of_colors"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <!-- android:textAppearance="@style/TextAppearance.AppCompat.Medium" -->
    <!-- android:textAppearance="@style/TextviewStyle" -->

    <SeekBar
        android:id="@+id/dimensions_seekbar_number_of_colors"
        android:layout_width="280dp"
        android:max="13"
        style="@style/BallaSeekBar"
        app:layout_constraintTop_toBottomOf="@id/dimensions_label_number_of_colors"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/dimensions_label_additional_tubes" />

    <TextView
        android:id="@+id/dimensions_label_additional_tubes"
        android:text="@string/label_additional_tubes"
        style="@style/BallaLabelText"
        app:layout_constraintTop_toBottomOf="@id/dimensions_seekbar_number_of_colors"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/dimensions_seekbar_additional_tubes" />

    <SeekBar
        android:id="@+id/dimensions_seekbar_additional_tubes"
        android:layout_width="160dp"
        android:max="2"
        style="@style/BallaSeekBar"
        app:layout_constraintTop_toBottomOf="@id/dimensions_label_additional_tubes"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/dimensions_label_height" />

    <TextView
        android:id="@+id/dimensions_label_height"
        android:text="@string/label_height"
        style="@style/BallaLabelText"
        app:layout_constraintTop_toBottomOf="@id/dimensions_seekbar_additional_tubes"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/dimensions_seekbar_height" />

    <SeekBar
        android:id="@+id/dimensions_seekbar_height"
        android:layout_width="200dp"
        android:max="5"
        style="@style/BallaSeekBar"
        app:layout_constraintTop_toBottomOf="@id/dimensions_label_height"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/dimensions_btn_ok" />

    <!-- android:onClick="onOkKlicked" -->
    <Button
        android:id="@+id/dimensions_btn_ok"
        android:text="@string/button_ok"
        style="@style/BallaButton"
        app:layout_constraintTop_toBottomOf="@id/dimensions_seekbar_height"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/dimensions_btn_cancel"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/dimensions_btn_cancel"
        android:text="@string/button_cancel"
        style="@style/BallaButton"
        app:layout_constraintTop_toBottomOf="@id/dimensions_seekbar_height"
        app:layout_constraintLeft_toRightOf="@id/dimensions_btn_ok"
        app:layout_constraintRight_toLeftOf="@id/dimensions_btn_defaults"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/dimensions_btn_defaults"
        android:text="@string/button_defaults"
        style="@style/BallaButton"
        app:layout_constraintTop_toBottomOf="@id/dimensions_seekbar_height"
        app:layout_constraintLeft_toRightOf="@id/dimensions_btn_cancel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>