<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:tag="main_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BallaActivityLayout"
    tools:context=".view.MainActivity">

    <ImageButton
        android:id="@+id/main_btn_burger_menu"
        android:tag="main_btn_burger_menu"
        android:contentDescription="@string/desc_burger_menu"
        style="@style/BallaTopButtonsInMainActivity"
        app:layout_constraintBottom_toTopOf="@id/my_draw_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/main_btn_reset_game"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_burger_menu" />
        <!-- app:srcCompat="@drawable/ic_burger_menu" -->

    <ImageView
        android:id="@+id/main_btn_reset_game"
        android:tag="main_btn_reset_game"
        android:contentDescription="@string/desc_rewind"
        style="@style/BallaTopButtonsInMainActivity"
        app:layout_constraintBottom_toTopOf="@id/my_draw_view"
        app:layout_constraintLeft_toRightOf="@id/main_btn_burger_menu"
        app:layout_constraintRight_toLeftOf="@id/main_btn_undo"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_reset_game" />

    <ImageView
        android:id="@+id/main_btn_undo"
        android:tag="main_btn_undo"
        android:contentDescription="@string/desc_arrow_left"
        style="@style/BallaTopButtonsInMainActivity"
        app:layout_constraintBottom_toTopOf="@id/my_draw_view"
        app:layout_constraintLeft_toRightOf="@id/main_btn_reset_game"
        app:layout_constraintRight_toLeftOf="@id/main_btn_lightbulb"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_undo" />

    <ImageView
        android:id="@+id/main_btn_lightbulb"
        android:tag="main_btn_lightbulb"
        android:contentDescription="@string/desc_lightbulb"
        style="@style/BallaTopButtonsInMainActivity"
        app:layout_constraintBottom_toTopOf="@id/my_draw_view"
        app:layout_constraintLeft_toRightOf="@id/main_btn_undo"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_empty" />

    <de.heikozelt.ballakotlin2.view.MyDrawView
        android:id="@+id/my_draw_view"
        android:tag="my_draw_view"
        style="@style/BallaDrawViewInMainActivity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_btn_burger_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>